@@ -9,5 +9,13 @@
 * *37 MB* `--no-header-files --no-man-pages --strip-java-debug-attributes --compress=1 --add-modules $(jdeps --print-module-deps ...)`
 * *34 MB* `--no-header-files --no-man-pages --strip-java-debug-attributes --compress=2 --add-modules $(jdeps --print-module-deps ...)`
 
+|MB |   | 
+|---|---|
+|330|JDK 13|
+|178|`--add-modules $(java --list-modules)`|
+|50|`--add-modules $(jdeps --print-module-deps ...)`|
+|44|`... --no-header-files --no-man-pages --strip-java-debug-attributes`|
+|37|`... --compress=1`|
+|34|`... --compress=2`|
 
 [JDK-8218913 Rename --strip-debug jlink plugin](https://bugs.openjdk.java.net/browse/JDK-8218913)
